@@ -1,3 +1,4 @@
+7/31/14 check in dependencies.json for 1.0.0
 # 1.0.0 7/31/14
 7/24/14 check in dependencies.json for 1.0.0-rc.1
 # 1.0.0-rc.1 7/24/14
